# chillify

./: .gitignore  README.md  bot_session.session  brain.py  classes.py  config.py  database.py  gui.py  logs.py  main.py  message_cache.db  requirements.txt
app/: index.html  style.css  vercel.json
bot/: classes.py  database.py  logs.py  main.py
bot/modules/: about.py  help.py  lang.py  memes.py  quotes.py  relax.py  spy.py  start.py  summon.py  tea.py  test.py
bot/nonregister/: giphy.py  reactlist.py
client/: CMakeLists.txt  cmake.sln  main.py  make.bat  telegram_bindings.cpp  utils.py
client/backend/: client.py  database.py  ipc.py  telethon_client.py
client/cmake/: telegram_options.cmake
client/frontend/: chat_window.py  crm_window.py  main_window.py
client/models/: user.py
client/services/: crm_service.py
client/ui/: mainwindow.ui
handlers/: about.py  giphy.py  help.py  lang.py  memes.py  quotes.py  relax.py  spy.py  start.py  test.py
launcher/: bot_manager.py  main.py  utils.py
locales/: ar.json  az.json  de.json  en.json  es.json  fr.json  he.json  ja.json  ka.json  kk.json  ko.json  languages.py  ru.json  tr.json  uk.json  zh.json
